Changelog:
==========

1.70.0 - 2012-??-??

    Add new default web video engine: FFMpeg Web Video
    Add support for new web protocols: mmsh:// and mmst://
	Files are sorted alphanumerically by default e.g. Episode 2 before Episode 10

1.60.0 - 2012-07-17

    Enabled FFmpeg video player for all platforms
    Added support for PGS (Blu-ray) subtitles
    Added support for TX3G (MPEG-4 Timed Text) subtitles
    Added support for VobSub (DVD) subtitles in MP4 container
    Better handling of embedded SSA/ASS subs styling
    Fixed audio track selection for MP4s and MOVs
    Fixed DV videos detection
    Added support for WebM videos downloaded from YouTube
    Optimized CBRVideoBitrate value for Panasonic TVs (thanks, ExSport!)
    Added new renderer: Sony SMP-N100 (thanks, mrw1986 and guillepalao!)
    Language updates:
        - Catalan translation update (thanks, aseques!)
        - Simplified Chinese translation update (thanks, lovenemesis!)
    Localized audio and subtitle priority defaults

1.54.0 - 2012-06-25

    Added LPCM transcoding option for all audio tracks
    Added DTS HD-MA support up to 7.1 channels: DTS core remux, LPCM and AC3 transcoding
    Added Dolby TrueHD support up to 7.1 channels: LPCM (recommended) and AC3 (buggy for 7.1) transcoding
    Added workaround for 2.0 384 kbits AC3 PS3 audio bug
    Added support for DirecTV HR series (thanks, DeFlanko!)
    Added support for LG's Smart TV Upgrader (LG 600ST)
    Added support for Yamaha RX-V671 (thanks, adresd!)
    Added support for OPPO BDP-83 and OPPO BDP-93 (thanks, adresd!)
    Fixed bug that occurred when resetting cache
    Made buffer display in megabytes instead of bytes
    Fixed overscan compensation bug on some renderers (thanks to tMH for reporting the bug!)
    Updated MPlayer for OSX to SB32
    Language updates:
        - CZE translation update (thanks, valib)

1.53.0 - 2012-06-11

    Fix global custom MEncoder options
    Re-fix NPE when toggling HTTP Engine V2