@@ -3,6 +3,7 @@ DLNAMediaDatabase.1=A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z
 DLNAMediaDatabase.2=Cleanup database...
 DLNAMediaDatabase.3=Compacting database...
 DLNAMediaDatabase.4=Scanning Folder:
+DLNAResource.0=\#--TRANSCODE--\#
 FFMpegDVRMSRemux.0=Alternative FFmpeg Path:
 FFMpegDVRMSRemux.1=Settings for DVR-MS remuxing
 FFMpegVideo.0=Encoder settings for AviSynth/FFmpeg engine only (Prefer AviSynth/MEncoder)
@@ -39,7 +40,7 @@ FoldTab.29=Show iPhoto library
 FoldTab.30=Show iTunes library
 FoldTab.31=Hide empty/non-media folders (Careful: slower browsing)
 FoldTab.32=Hide cache folder
-FoldTab.33=Hide \#Transcode\# Folder
+FoldTab.33=Hide \#--TRANSCODE--\# Folder
 FoldTab.34=Show aperture library
 FoldTab.35=None
 FontFileFilter.3=TrueType Fonts
@@ -285,7 +286,7 @@ TrTab2.43=\nis a balance between network speed and CPU power: the more quality y
 TrTab2.44=\nthe more your CPU will suffer\! Also, don't expect to fit a 1080p action movie in the purest quality in 15Mbps :p
 TrTab2.50=Maximum number of audio channels to output for AC3 re-encoding:
 TrTab2.51=Definitely disable subtitles
-TrTab2.52=Chapters \#Transcode\# folder support / Interval in minutes:
+TrTab2.52=\#--TRANSCODE--\# folder chapter support / Interval in minutes:
 TrTab2.55=2 channels (Stereo)
 TrTab2.56=6 channels (5.1)
 TrTab2.60=Great quality
